packages/jsii/test/negatives/neg.method-name.2.ts
///!MATCH_ERROR: Member names cannot use an underscore: hello_world

export class MyClass {
    hello_world() {
        return "hi";
    }
}
